assets/css/style.css
/* ... */
/* Microdata
-------------------------------------------------------------------------------*/

/* Tools templates
-------------------------------------------------------------------------------*/
.main-content.tools {
	margin: 0 auto;
	margin-bottom: 54px;
	width: 60%;
}

.actions a {
	font-family: "Franklin ITC Light", sans-serif;
	font-size: 18px;
}

/* Forms UI
-------------------------------------------------------------------------------*/

/* take control over placeholders */
::-webkit-input-placeholder {
   color: #a9a9a9;
}

:-moz-placeholder { /* Firefox 18- */
   color: #a9a9a9;
}

::-moz-placeholder {  /* Firefox 19+ */
   color: #a9a9a9;
}

:focus::-webkit-input-placeholder {
	color: #bebebe;
}

:focus:-moz-placeholder { /* Firefox 18- */
   color: #bebebe;
}

:focus::-moz-placeholder {  /* Firefox 19+ */
   color: #bebebe;
}

input[readonly] {
	border-color: #ddd !important;
	color: #aaa !important;
	font-style: italic;
}

form {
	text-align: left;
	font-family: "Franklin ITC Light", sans-serif;
	font-weight: normal;
	font-style: normal;
}

form p {
	margin: 0 0 16px;
	position: relative;
	font-size: 14px;
	line-height: 2;
	max-width: 525px;
}

form p:last-child {
	margin-bottom: 0px;
}

input[type="submit"]:focus {
	outline: 1px dotted black;
}

input[type="text"],
input[type="email"],
input[type="password"],
textarea {
	display: block;
	width: 100%;
	margin: 0;
	padding: 12px;
	border: 1px solid #ccc;
	border-radius: 3px;
	outline: 0;
	color: #000;
	font-size: 18px;
	box-shadow: inset 0px 0px 10px rgba(0,0,0,.05);

	-webkit-transition: box-shadow 100ms ease-in;
	-moz-transition: box-shadow 100ms ease-in;
	-o-transition: box-shadow 100ms ease-in;
	-ms-transition: box-shadow 100ms ease-in;
	transition: box-shadow 100ms ease-in;
}

textarea:focus,
input:focus,
textarea:valid,
input:valid {
	box-shadow: inset 0px 0px 10px rgba(0,0,0,.15);
}

label {
	position: relative;
	display: block;
	font-size: 14px;
}

h3 label  {
	margin-bottom: 12px;
	font-size: 24px;
	line-height: 24px;
	text-transform: none;
}

.js textarea[data-autoresize] {
	resize: none;
}

textarea:not([data-autoresize]) {
	-webkit-transition: all 200ms ease-in-out, height 0;
	-moz-transition: all 200ms ease-in-out, height 0;
	-ms-transition: all 200ms ease-in-out, height 0;
	-o-transition: all 200ms ease-in-out, height 0;
	transition: all 200ms ease-in-out, height 0;
}

.button {
	padding: 12px 24px;
	border: 0;
	border-radius: 24px;
	font-family: "Franklin ITC Light", sans-serif;
	font-size: 18px;
	line-height: 1.25;
	font-weight: normal;
	font-style: normal;
}

.button.primary {
	background: #bb3825;
	color: #fff;
}

.button.primary.inactive {
	opacity: 0.4;
}

.button.secondary {
	background: #fff;
	border: 1px solid #ccc;
	color: #222;
}

/* comment sign-in submit specific -- spinner */
#comment-submit-holder {
	position: relative;
	float: left;
	margin-right: 12px;
	margin-bottom: 0px;
}

.js-spinner {

}

.main-content .form-heading {
	margin-bottom: 12px;
	font-family: "Franklin ITC Light", sans-serif;
	font-size: 24px;
	line-height: 24px;
	font-weight: normal;
	font-style: normal;
	text-transform: none;
}
.main-content .form-heading.small {
	font-size: 14px;
	line-height: 16px;
}

.spacer.large {
	height: 0;
	border: 0;
	margin: 60px auto;
}

fieldset figure {
    margin: 1em 0;
    padding: 1em;
    text-align: center;
    background: #eee;
}

fieldset legend {
	line-height: 24px;
	display: block;
	width: 100%;
}

fieldset legend + * { /*hack to get webkit Safari to understand margin bottom for the legend tag*/
    -webkit-margin-top-collapse : separate;
    margin-top: 12px;
}

.ajaxauth_loader {
	float: left;
	margin-left: 12px;
}

input + button {
	margin-left: 12px;
}

/* Ported from editables.css
-------------------------------------------------------------------------------*/
.note {
	position: relative;
	display: inline-block;
	margin-top: 6px;
	font-size: 14px;
	line-height: 1.4;
	font-style: italic;
	color: #666;
}

figure .note {
	display: block;
}

.invalid .note {
	/*z-index: -10;*/ /*do we need this?*/
}

label + .note {
	margin-top: -2em;
	margin-bottom: 2em;
}

.password-mask {
	position: absolute;
	top: 3.2em;
	right: 2%;
	font-size: .85em;
}

.error-message {
	display: block;
	position: absolute;
	z-index: 100;
	top: 65px;
	top: 5.26em;
	left: 49%;
	background: #fff;
	padding: 2px 6px;
	border: 1px solid #ccc;
	border-radius: 4px;
	color: #bb3825;
	line-height: 1.4;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	-o-transform: translateX(-50%);
	transform: translateX(-50%);
}

.invalid #comment-content_error {
	top: auto;
	bottom: -12px;
}

.good-show {
	position: absolute;
	top: 0;
	left: 50%;
	transform: translateX(-50%);
	color: rgba(23,187,91,1);
	padding: .4em 1em;
	border: 1px solid rgba(23,187,91,0.3);
	border-top: 0;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
	box-shadow: 0px 0px 9px -4px  rgba(23,187,91,0.3);
}

/*----Check-radio customized------*/
fieldset {
	/*margin-bottom: 2em;*/
}

.scrolling-checkboxes {
/*	display: inline-block;
	overflow-x: hidden;
	overflow-y: auto;
	min-width: none;
	max-height: 150px;
	padding: 0;
	border: 1px solid #ccc;
	border-radius: 3px;*/
}

fieldset.check-radio label {
	margin-bottom: .5em;
}

fieldset.check-radio input {
/*	font-size: 2em;
	margin: 0 3px;
	vertical-align: text-bottom;*/
}

fieldset.check-radio.customized label,
fieldset.select-field.customized label {
	position: relative;
	padding-left: 28px;
}

fieldset.check-radio.customized .scrolling-checkboxes label {
/*	padding: .4em .4em .4em 18px;
	margin: 0;
	white-space: nowrap;*/
}

fieldset.check-radio.customized .scrolling-checkboxes label:active {
	/*color: #999;*/
}

fieldset.check-radio.customized .scrolling-checkboxes label:nth-of-type(odd) {
/*	background: #eee;*/
}
/* ... */

